tests/misc_tests/type_failures_ui/failed_type_inference-err.rs
const fn main(){
    _ = typewit_gce::gce_int_eq!(0, 0);
}